added progress bar and is styled

--- a/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
@@ -4,4 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WelcomeActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame"
+    android:background="#f8f9ed">
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_gravity="center_horizontal|bottom"
+        android:progressDrawable="@drawable/progressbar"
+        android:minHeight="4dp"
+        android:maxHeight="4dp"/>
+
+</FrameLayout>
