--- a/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
@@ -17,4 +17,22 @@
         android:minHeight="4dp"
         android:maxHeight="4dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:fontFamily="sans-serif-condensed"
+        android:id="@+id/processText"
+        android:paddingBottom="6dp"
+        android:layout_gravity="center_horizontal|bottom"
+        android:textColor="#000000"
+        android:layout_marginBottom="3dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_gravity="center"
+        android:background="@drawable/circletips" />
 </FrameLayout>
