--- a/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
@@ -29,10 +29,10 @@
         android:textColor="#000000"
         android:layout_marginBottom="3dp" />
 
-    <ImageView
-        android:layout_width="wrap_content"
+    <com.airwhip.circle.tips.utils.DynamicImageView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_gravity="center"
-        android:background="@drawable/circletips" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/circletips"
+        android:layout_gravity="center" />
 </FrameLayout>
