--- a/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text="@string/loading_achievements"
         android:fontFamily="sans-serif-condensed"
         android:id="@+id/processText"
         android:paddingBottom="6dp"
