--- a/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
@@ -29,10 +29,33 @@
         android:textColor="#000000"
         android:layout_marginBottom="3dp" />
 
-    <com.airwhip.circle.tips.utils.DynamicImageView
-        android:layout_width="fill_parent"
+    <ImageButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/circletips"
-        android:layout_gravity="center" />
+        android:id="@+id/imageButton3"
+        android:layout_gravity="center"
+        android:src="@drawable/play"
+        android:background="@null"
+        android:layout_marginBottom="70dp"
+        android:layout_marginLeft="65dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton2"
+        android:layout_gravity="center"
+        android:src="@drawable/communicate"
+        android:background="@null"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="45dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:layout_gravity="center"
+        android:src="@drawable/health"
+        android:background="@null"
+        android:layout_marginRight="70dp" />
+
 </FrameLayout>
