--- a/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/layout/welcome_activity.xml
@@ -23,7 +23,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/loading_achievements"
         android:fontFamily="sans-serif-condensed"
-        android:id="@+id/processText"
+        android:id="@+id/tip"
         android:paddingBottom="6dp"
         android:layout_gravity="center_horizontal|bottom"
         android:textColor="#000000"
@@ -32,7 +32,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton3"
+        android:id="@+id/play"
         android:layout_gravity="center"
         android:src="@drawable/play"
         android:background="@null"
@@ -42,7 +42,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton2"
+        android:id="@+id/communicate"
         android:layout_gravity="center"
         android:src="@drawable/communicate"
         android:background="@null"
@@ -52,7 +52,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:id="@+id/health"
         android:layout_gravity="center"
         android:src="@drawable/health"
         android:background="@null"
